--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ apply plugin: 'java'
 group = "snet.abe"
 version = "1.0.0"
 
-//sourceCompatibility = '1.7'
-//targetCompatibility = '1.7'
+sourceCompatibility = '1.7'
+targetCompatibility = '1.7'
 
 repositories {
     mavenCentral()
