--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,8 @@
 plugins {
-    id "ca.coglinc.javacc" version "2.3.1"
+    id 'maven'
+    id 'java'
+    id 'ca.coglinc.javacc' version '2.3.1'
 }
-
-apply plugin: 'maven'
-apply plugin: 'java'
-
-group = "snet.abe"
-version = "1.0.0"
-
-sourceCompatibility = '1.7'
-targetCompatibility = '1.7'
 
 repositories {
     mavenCentral()
@@ -22,6 +15,12 @@ dependencies {
     compile 'it.unisa.dia.gas:jpbc-pbc:2.0.0'
     testCompile 'junit:junit:4.12'
 }
+
+group = "snet.abe"
+version = "1.0.0"
+
+sourceCompatibility = '1.7'
+targetCompatibility = '1.7'
 
 compileJjtree {
     inputDirectory = file('src/main/jjtree/')
